# Arcaea_slicer

./: .gitignore  BUILDING_EXE.md  README.md  pyproject.toml  requirements-build.txt
.github/workflows/: release-windows-exe.yml
examples/: slides.json  songlist_example.json
src/arcaea_slicer/: __main__.py  aff.py  cli.py  ffmpeg.py  songlist.py
src/arcaea_slicer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_aff.py  test_songlist.py
